--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -6,25 +6,25 @@ svg {
     fill: #b3b3b3;
 }
 
-#SE:hover {
+/* #SE:hover {
     cursor: pointer;
     fill: #808080;
-}
+} */
 
 .United.States {
     fill: #b3b3b3;
 }
 
-.United.States:hover ~ .United.States, .United.States:hover {
+/* .United.States:hover ~ .United.States, .United.States:hover {
     cursor: pointer;
     fill: #808080;
-}
+} */
 
 .Russian.Federation {
     fill: #b3b3b3;
 }
 
-.Russian.Federation:hover ~ .Russian.Federation, .Russian.Federation:hover {
+/* .Russian.Federation:hover ~ .Russian.Federation, .Russian.Federation:hover {
     cursor: pointer;
     fill: #808080;
-}
+} */
