--- a/webpage/css/russia.css
+++ b/webpage/css/russia.css
@@ -1,10 +1,19 @@
 * {
     margin: 0;
+    padding: 0;
 }
 
 .img-grid {
     display: grid;
+    grid: 1fr 1fr / 1fr 1fr 1fr;
     height: 80vh;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: fill;
 }
 
 .info {
