--- a/webpage/css/russia.css
+++ b/webpage/css/russia.css
@@ -3,18 +3,91 @@
     padding: 0;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+/* 
+Typography
+*/
+
+h1 {
+    font-size: 4rem;
+}
+
+h2 {
+
+}
+
+p {
+
+}
+
+/*
+Header
+*/
+.header {
+    height: 90vh;
+
+    display: flex;
+
+    background-image: url(../img/russia/tourism.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.titlecard {
+    margin: auto;
+    text-align: center;
+
+    border-radius: 0.5rem;
+
+    display: inline-block;
+    background-color: rgba(245, 245, 245, 0.5); /* Whitesmoke */
+}
+
+.titlecard h1 {
+    padding: 1rem 0 0 0;
+}
+
+.titlecard h2 {
+    padding: 1rem;
+}
+
+/*
+Main text
+*/
+.main-text {
+    margin: 2rem auto;
+
+    max-width: 40vw;
+
+    background-color: slategrey;
+}
+
+.main-text p {
+    padding: 2rem;
+}
+
+/*
+Image grid
+*/
+
 .img-grid {
     display: grid;
     grid: 1fr 1fr / 1fr 1fr 1fr;
     height: 80vh;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-    display: block;
+.img-grid img {
     object-fit: cover;
 }
+
+
+
+/*////////////////*/
 
 .info {
     flex-direction: column;
