--- a/webpage/css/russia.css
+++ b/webpage/css/russia.css
@@ -1,3 +1,8 @@
+/* 
+Imports
+*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -15,14 +20,21 @@ Typography
 
 h1 {
     font-size: 4rem;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
 
+h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p {
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: large;
 }
 
 /*
@@ -34,6 +46,8 @@ Header
     display: flex;
 
     background-image: url(../img/russia/tourism.jpg);
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -49,11 +63,11 @@ Header
 }
 
 .titlecard h1 {
-    padding: 1rem 0 0 0;
+    padding: 0.8rem 0 0 0;
 }
 
 .titlecard h2 {
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
 }
 
 /*
@@ -67,8 +81,13 @@ Main text
     background-color: slategrey;
 }
 
+.main-text h3 {
+    padding: 1.3rem 0 0.2rem 2rem;
+    font-size: x-large;
+}
+
 .main-text p {
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
 }
 
 /*
