--- a/webpage/css/russia.css
+++ b/webpage/css/russia.css
@@ -30,11 +30,26 @@ h2 {
 
 h3 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: x-large;
 }
 
 p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: large;
+}
+
+@media (max-width: 1000px) {
+    h1 {
+        font-size: 2.8rem;
+    }
+
+    h2 {
+        font-size: 1.3rem;
+    }
+
+    p {
+        font-size: 1.05rem;
+    }
 }
 
 /*
@@ -56,6 +71,8 @@ Header
     margin: auto;
     text-align: center;
 
+    max-width: 90%;
+
     border-radius: 0.5rem;
 
     display: inline-block;
@@ -73,8 +90,13 @@ Header
 /*
 Main text
 */
+.main-text-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .main-text {
-    margin: 2rem auto;
+    margin: 2rem 0;
 
     max-width: 40vw;
 
@@ -83,16 +105,35 @@ Main text
 
 .main-text h3 {
     padding: 1.3rem 0 0.2rem 2rem;
-    font-size: x-large;
 }
 
 .main-text p {
     padding: 0 2rem 2rem 2rem;
 }
 
+@media (max-width: 1000px) {
+    .main-text {
+        margin: 2rem auto;
+        max-width: 85vw;
+    }
+
+    .main-text:last-of-type {
+        margin: 0 auto 2rem auto;
+    }
+
+    .main-text-container {
+        flex-direction: column;
+    }
+}
+
 /*
 Image grid
 */
+.img-grid-container h3 {
+    padding: 0.5rem;
+
+    text-align: center;
+}
 
 .img-grid {
     display: grid;
@@ -104,27 +145,8 @@ Image grid
     object-fit: cover;
 }
 
-
-
-/*////////////////*/
-
-.info {
-    flex-direction: column;
-}
-
-.info h1 {
-    text-align: center;
-}
-
-.info p {
-    width: 40%;
-    margin: 2.5% 7.5% 2.5% 2.5%;
-
-    float: right;
-}
-
-.info p:first-of-type {
-    margin: 2.5% 2.5% 2.5% 7.5%;
-
-    float: left;
+@media (max-width: 1000px) {
+    .img-grid {
+        grid: 1fr 1fr 1fr / 1fr 1fr;
+    }
 }
