--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -1,12 +1,21 @@
 * {
     margin: 0;
     padding: 0;
+    scrollbar-width: none;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
     min-height: 100vh;
     display: grid;
     grid: auto 1fr / auto;
+}
+
+.hidden {
+    display: none;
 }
 
 /*
@@ -119,6 +128,8 @@ Map
 */
 .svgcontainer {
     position: relative;
+    height: 80vh;
+    margin: 2rem;
 }
 
 svg {
@@ -186,5 +197,159 @@ Flag Menu
 
     .flagmenu {
         display: initial;
+    }
+}
+
+/*
+
+Russia CSS
+
+*/
+
+/* 
+Imports
+*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
+#russia-page img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+/* 
+Typography
+*/
+
+#russia-page h1 {
+    font-size: 4rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#russia-page h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
+
+#russia-page h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: x-large;
+}
+
+#russia-page p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: large;
+}
+
+@media (max-width: 1000px) {
+    #russia-page h1 {
+        font-size: 2.8rem;
+    }
+
+    #russia-page h2 {
+        font-size: 1.3rem;
+    }
+
+    #russia-page p {
+        font-size: 1.05rem;
+    }
+}
+
+/*
+Header
+*/
+#russia-page .header {
+    height: 90vh;
+
+    display: flex;
+
+    background-image: url(../img/russia/tourism.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#russia-page .titlecard {
+    margin: auto;
+    text-align: center;
+
+    max-width: 90%;
+
+    border-radius: 0.5rem;
+
+    display: inline-block;
+    background-color: rgba(245, 245, 245, 0.5); /* Whitesmoke */
+}
+
+#russia-page .titlecard h1 {
+    padding: 0.8rem 0 0 0;
+}
+
+#russia-page .titlecard h2 {
+    padding: 0 1rem 1rem 1rem;
+}
+
+/*
+Main text
+*/
+#russia-page .main-text-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#russia-page .main-text {
+    margin: 2rem 0;
+
+    max-width: 40vw;
+
+    background-color: slategrey;
+}
+
+#russia-page .main-text h3 {
+    padding: 1.3rem 0 0.2rem 2rem;
+}
+
+#russia-page .main-text p {
+    padding: 0 2rem 2rem 2rem;
+}
+
+@media (max-width: 1000px) {
+    #russia-page .main-text {
+        margin: 2rem auto;
+        max-width: 85vw;
+    }
+
+    #russia-page .main-text:last-of-type {
+        margin: 0 auto 2rem auto;
+    }
+
+    #russia-page .main-text-container {
+        flex-direction: column;
+    }
+}
+
+/*
+Image grid
+*/
+#russia-page .img-grid-container h3 {
+    padding: 0.5rem;
+
+    text-align: center;
+}
+
+#russia-page .img-grid {
+    display: grid;
+    grid: 1fr 1fr / 1fr 1fr 1fr;
+    height: 80vh;
+}
+
+#russia-page .img-grid img {
+    object-fit: cover;
+}
+
+@media (max-width: 1000px) {
+    #russia-page .img-grid {
+        grid: 1fr 1fr 1fr / 1fr 1fr;
     }
 }
